# portfolio-fee-drag-simulator

./: LICENSE  README.md  pyproject.toml
demo/: artifact_catalog.json  artifact_catalog.md  assumption_diff.json  assumption_diff.md  batch_compare.json  batch_compare.md  case_gallery.html  case_gallery.json  case_gallery.md  cold_start_walkthrough.json  cold_start_walkthrough.md  dashboard.html  decision_journal.json  decision_journal.md  docs_export.json  docs_export.md  fee_drag_packet.json  fee_drag_packet.md  fixture_doctor.json  fixture_doctor.md  history_comparison.md  maturity_report.md  package_audit.json  package_audit.md  promotion_checklist.json  promotion_checklist.md  public_scan.json  release_audit_summary.json  release_audit_summary.md  release_manifest.json  reproducibility_pack.json  reproducibility_pack.md  review_ledger.md  risk_flags.json  risk_flags.md  scenario_narrative.json  scenario_narrative.md  scenario_presets.json  security_boundary_report.json  security_boundary_report.md  (+6 more)
demo/input_templates/: assumptions_template.json  holdings_template.csv  local_inputs_README.md
docs/: cold_start_user_journey_review.json  cold_start_user_journey_review.md  release_readiness_review.json  release_readiness_review.md  v1_0_1_public_release_notes.json  v1_0_1_public_release_notes.md  v1_0_1_sdist_smoke_evidence.json  v1_0_1_sdist_smoke_evidence.md
portfolio_fee_drag_simulator/: __init__.py  cli.py  model.py
portfolio_fee_drag_simulator/data/: example_assumptions.json  example_assumptions_review.json  example_history.json  (+1 more)
tests/: test_cli.py
(+1 files in other folders)
